--- a/templates/webcomponent/comp_template.twig
+++ b/templates/webcomponent/comp_template.twig
@@ -18,7 +18,7 @@
 <?php $this->end() ?>
 
 <?php echo
-    $this->Html->script('components/{{ name }}/{{ name }}', [
+    $this->Html->script(($namePlugin ? $namePlugin . '.' : '') . 'components/{{ name }}/{{ name }}', [
         'block' => 'js-{{ name }}',
         'type' => 'module',
     ]);
