Подправил шаблоны twig: в том числе разделил на отдельные методы получения Dom для теневой и не теневой модели.

--- a/templates/webcomponent/comp_template.twig
+++ b/templates/webcomponent/comp_template.twig
@@ -18,7 +18,7 @@
 <?php $this->end() ?>
 
 <?php echo
-    $this->Html->script(($namePlugin ? $pathPluginJs : 'components/field-telephone/field-telephone'), [
+    $this->Html->script(($namePlugin ? $pathPluginJs : 'components/{{ name }}/{{ name }}'), [
         'block' => 'js-field-telephone',
         'type' => 'module',
     ]);
