Исправления, дополнения и улучшения.

--- a/templates/webcomponent/comp_template.twig
+++ b/templates/webcomponent/comp_template.twig
@@ -13,6 +13,11 @@
  */
 ?>
 
+<?php
+    // Служебные атрибуты:
+    //$attr[0]['status'] = 'lossfocus';
+?>
+
 <?php $this->start('wc-{{ name }}') ?>
     <?php // Содержимое веб-компонента. ?>
 <?php $this->end() ?>
