--- a/templates/webcomponent/comp_template.twig
+++ b/templates/webcomponent/comp_template.twig
@@ -6,10 +6,8 @@
  *
  * Используйте <?= $this->Webcomp->{{ nameWebComp }}() ?>
  *
- * Настройки веб-компонента:
- *  view =>
- *      'black' - чёрный вид;
- *      'red'   - сделайте красный вид.
+ * Описание настроек веб-компонента:
+ *      https://github.com/valeriy-brunov/
  */
 ?>
 
