--- a/templates/webcomponent/comp_template.twig
+++ b/templates/webcomponent/comp_template.twig
@@ -22,9 +22,15 @@
 
 <?php
     $this->Html->script(($namePlugin ? $pathPluginJs : 'components/{{ name }}/{{ name }}'), [
-        'block' => 'script',
+        'block' => ($this->request->is('ajax') ? 'js-{{ name }}' : 'script'),
         'type' => 'module',
     ]);
+?>
+
+<?php
+    if ( $this->request->is('ajax') ) {
+        $attr[0]['jsload'] = str_replace(['<script src="', '" type="module"></script>'], ['', ''], $this->fetch('js-{{ name }}'));
+    }
 ?>
 
 <?php
